[package]
name = "sycamore_toast"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sycamore = {version="0.8.0", features = ["suspense", "ssr"]}
uuid = {version="1.1.2", features=["v4", "fast-rng", "js", "serde"]}
web-sys = "0.3.56"
gloo-timers = {version="0.2.1", features=["futures"]}
wasm-cookies = "0.1.0"
serde = {version="1.0.145", features=["derive"]}
serde_json = "1.0.87"